[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://levels/launcher.gd" id="1_8lxr4"]
[ext_resource type="Script" path="res://tools/tool_color_rect.gd" id="2_2nvc5"]
[ext_resource type="PackedScene" uid="uid://ckw4dv0xxi1wh" path="res://ui/menu_selection_container.tscn" id="2_sqnwx"]
[ext_resource type="PackedScene" uid="uid://d32vr0askpuce" path="res://ui/menu_selection.tscn" id="3_p5070"]

[node name="Launcher" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8lxr4")
background_color = Color(0.227451, 0.14902, 0.243137, 1)

[node name="BackgroundColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.227451, 0.14902, 0.243137, 1)
script = ExtResource("2_2nvc5")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuSelectionContainer" parent="CenterContainer" instance=ExtResource("2_sqnwx")]
layout_mode = 2
theme_override_constants/separation = -8
title = "Game Launcher"
title_font_size = 32

[node name="FirstSelection" parent="CenterContainer/MenuSelectionContainer" instance=ExtResource("3_p5070")]
unique_name_in_owner = true
layout_mode = 2
selection_name = "Begin fullscreen"

[node name="SecondSelection" parent="CenterContainer/MenuSelectionContainer" instance=ExtResource("3_p5070")]
unique_name_in_owner = true
layout_mode = 2
selection_name = "Begin windowed"

[node name="ExitSelection" parent="CenterContainer/MenuSelectionContainer" instance=ExtResource("3_p5070")]
unique_name_in_owner = true
layout_mode = 2
selection_name = "Exit"
